welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:14: error: not found: value decalage
		val decalage() = litMessage().toInt
                    ^Array2:15: error: not found: value decalage
		for (j <- decalage() to getMondeHauteur() - 1) {
                          ^