welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {

	var T = new Array[Color](getMondeHauteur)
	for (i <- 0 to T.length - 2) {
		T(i)=getCouleurSol()
		avance()
	}
	for(i<-2 to getMondeLargeur()) {
		recule (getMondeHauteur())
		gauche()
		avance()
		droite()
		avance()
		val decalage() = litMessage().toInt
		for (j <- decalage() to getMondeHauteur() - 1) {
			setCouleurBrosse(T(j))
			baisseBrosse()
			leveBrosse()
			avance()
		}
	}
}
